[package]
name = "bedrock-old"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bit-vec = "0.6"
bitflags = "2"
bytemuck = "1.14"
encase = "0.7"
glam = "0.25"
wgpu = "0.18.0"
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }